# Project_E

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: copilot_agent.py  rag_agent.py  rca_agent.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: copilot.py  graph.py  health.py  history.py  ingestion.py  rca.py  search.py  stats.py
backend/app/core/: config.py  logging.py
backend/app/db/: neo4j_connection.py
backend/app/db/repositories/: base.py  graph_repository.py  history_repository.py  vector_repository.py
backend/app/db/schema/: init_schema.cypher
backend/app/models/: extraction.py  schemas.py
backend/app/scripts/: deduplicate_migration.py  seed_data.py
backend/app/services/: agent_service.py  embedding_service.py  extraction_service.py  graph_service.py  ingestion_service.py  rag_service.py  rca_service.py
backend/app/workers/: ingestion_worker.py
backend/sample-data/: SOP-001.txt  equipment-inventory.xlsx
backend/tests/: conftest.py  test_api.py  test_comparison.py  test_copilot.py  test_deletion.py  test_history.py  test_ingestion.py  test_rca.py
frontend/: .env.example  .eslintrc.json  Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: use-loading-message.ts  use-streaming-chat.ts  use-streaming-rca.ts
frontend/lib/: api-client.ts  api.ts  env.ts
frontend/public/: manifest.json  sw.js
(+19 files in other folders)
