[project]
name = "marg-backend"
version = "0.1.0"
description = "FastAPI backend for Project E Knowledge Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "neo4j>=5.18.0",
    "langchain>=0.1.12",
    "langgraph>=0.0.30",
    "voyageai>=0.2.1",
    "unstructured[all-docs]>=0.12.5",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "google-genai>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.3",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pyrefly]
python-interpreter-path = ".venv/bin/python"

